<resources>
    <string name="app_name">UMS HUSC</string>

    <!-- Strings for networking -->
    <string name="error_network_disconected">Không có kết nối Internet</string>
    <string name="error_server_not_response">Máy chủ không phản hồi</string>
    <string name="error_time_out">Quá thời gian kết nối đến máy chủ</string>

    <!-- Strings related to login -->
    <string name="prompt_ma_sinh_vien">Mã sinh viên</string>
    <string name="prompt_mat_khau">Mật khẩu</string>
    <string name="prompt_old_pass">Mật khẩu cũ</string>
    <string name="prompt_new_pass">Mật khẩu mới</string>
    <string name="prompt_rep_pass">Xác nhận mật khẩu mới</string>
    <string name="prompt_dang_kiem_tra_thong_tin">Đang kiểm tra thông tin &#8230;</string>
    <string name="action_dang_nhap">Đăng nhập</string>
    <string name="action_dang_nhap_short">Đăng nhập</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="error_ma_sinh_vien_khong_hop_le">Mã sinh viên không hợp lệ</string>
    <string name="error_mat_khau_qua_ngan">Mật khẩu tối thiểu 6 ký tự</string>
    <string name="error_login_failed">Tên tài khoản hoặc mật khẩu không đúng</string>
    <string name="error_truong_bat_buoc">Trường này là bắt buộc</string>

    <!-- Main activity -->
    <string name="navigation_drawer_open">Mở menu</string>
    <string name="navigation_drawer_close">Đóng menu</string>
    <string name="action_goToToday">Đến ngày hiện tại</string>
    <string name="action_selectSemester">Chọn học kì tác nghiệp</string>

    <!-- Navigation drawer menu -->
    <string name="title_nav_news">Thông báo và tin tức</string>
    <string name="title_nav_timetable">Thời khóa biểu</string>
    <string name="title_nav_message">Tin nhắn</string>
    <string name="title_nav_incoming_message">Tin nhắn đến</string>
    <string name="title_nav_outcoming_message">Tin nhắn đã gửi</string>
    <string name="title_nav_deleted_message">Tin nhắn đã xóa</string>
    <string name="title_nav_setting">Cài đặt</string>
    <string name="title_nav_resume">Lý lịch cá nhân</string>
    <string name="title_nav_change_password">Đổi mật khẩu</string>
    <string name="title_nav_sign_out">Đăng xuất</string>
    <string name="title_nav_app_info">Thông tin về ứng dụng</string>

    <string name="title_activity_detail_news">Chi tiết thông báo</string>

    <!-- THONG BAO -->
    <string name="channel_name">UMS-HUSC</string>
    <string name="channel_description">UMS-HUSC-Description</string>
    <string name="chanel_id">15011997</string>

    <!-- SETTING -->
    <string name="share_pre_key_setting">setting</string>
    <string name="share_pre_key_news">sp_notification</string>
    <string name="share_pre_key_receive_message">sp_message</string>
    <string name="share_pre_key_send_message">sp_send_message</string>
    <string name="share_pre_key_alarm_timetable">sp_alarm_timetabel</string>
    <string name="share_pre_key_alarm_timetable_time">sp_alarm_timetable_time</string>
    <string name="pre_category_notifications">notifications_category</string>
    <string name="pre_key_news">pre_key_news</string>
    <string name="pre_sum_news">Nhận thông báo khi có tin tức mới từ phòng đào tạo</string>
    <string name="pre_key_receive_message">pre_key_receive_message</string>
    <string name="pre_sum_receive_message">Nhận thông báo khi có tin nhắn đến</string>
    <string name="pre_key_send_message">pre_key_send_message</string>
    <string name="pre_sum_send_message">Nhận thông báo trạng thái tin nhắn đi</string>
    <string name="pre_category_alarm">alarm_category</string>
    <string name="pre_key_alarm_timetable">pre_key_alarm_timetable</string>
    <string name="pre_sum_alarm_timetable">Nhắc nhở lịch học hằng ngày</string>
    <string name="pre_key_alarm_timetable_time">pre_key_alarm_timetable_time</string>
    <string name="pre_title_alarm_timetable_time">Nhắc tôi trước giờ học</string>
    <string name="pre_sum_alarm_timetable_time">Chạm để thay đổi</string>
    <string-array name="timetable_time_entries">
        <item>10 phút</item>
        <item>15 phút</item>
        <item>20 phút</item>
        <item>30 phút</item>
        <item>40 phút</item>
        <item>50 phút</item>
        <item>60 phút</item>
    </string-array>
    <string-array name="timetable_time_values">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

    <!-- Message -->
    <string name="title_activity_detail_message">Tin nhắn</string>
    <string name="title_received_message">Đã nhận</string>
    <string name="title_sent_message">Đã gửi</string>
    <string name="title_deleted">Đã xóa</string>
    
    <!-- Day of week -->
    <string name="monday">Thứ hai</string>
    <string name="tuesday">Thứ ba</string>
    <string name="wednesday">Thứ tư</string>
    <string name="thursday">Thứ năm</string>
    <string name="friday">Thứ sáu</string>
    <string name="saturday">Thứ bảy</string>
    <string name="sunday">Chủ nhật</string>

    <!-- Session of day -->
    <string name="morning">Sáng</string>
    <string name="afternoon">Chiều</string>
    <string name="evening">Tối</string>

    <!-- Change password -->
    <string name="caution_1">* Mật khẩu được sử dụng để đăng nhập vào hệ thống và có vai trò rất quan trọng. Hãy giữ gìn mật khẩu cẩn thận và tuyệt đối không được giao mật khẩu cho người khác.</string>
    <string name="caution_2">* Sinh viên phải chịu hoàn toàn trách nhiệm nếu để lộ mật khẩu dẫn đến ảnh hưởng đến thông tin và dữ liệu của cá nhân cũng như công việc của bản thân.</string>
    <string name="caution_3">* Nên đặt mật khẩu đủ dài và khó đoán. Không nên sử dụng ngày sinh, số điện thoại, cách viết tắt của họ tên,.... để làm mật khẩu.</string>
    <string name="caution_4">* Để tránh các sai sót khi gõ mật khẩu, nên tắt chế độ gõ tiếng Việt trước khi thay đổi mật khẩu.</string>
    <string name="changePassSuccess">Đổi mật khẩu thành công !</string>
    <string name="error_old_pass_incorect">Mật khẩu cũ không đúng</string>
    <string name="error_rep_password_incorrect">Xác nhận mật khẩu không đúng</string>
    <string name="action_refresh_resume">Làm mới</string>

    <!-- Account info -->
    <string name="share_pre_key_account_info">student</string>
    <string name="pre_key_account_id">account_id</string>
    <string name="pre_key_student_id">student_id</string>
    <string name="pre_key_password">password</string>
    <string name="pre_key_student_name">name</string>
    <string name="pre_key_course">course</string>
    <string name="pre_key_majors">majors</string>
    <string name="pre_key_semester">semester</string>
    <string name="error_not_handle">Có lỗi bất ngờ xảy ra, vui lòng thử lại sau</string>

    <string name="selecting_semester_caution">Phải chọn đúng học kì tác nghiệp dựa trên các học kì được nhà trường bố trí. Việc nhắc nhở lịch học sẽ dựa trên học kì được tác nghiệp.</string>

    <string name="title_activity_reply_message">Trả lời</string>
    <string name="share_pre_key_firebase">FIREBASE</string>
    <string name="pre_key_token">TOKEN</string>

    <!-- Resume -->
    <string-array name="resident_type_name">
        <item>----</item>
        <item>Ở nội trú</item>
        <item>Ở ngoại trú</item>
        <item>Theo hộ khẩu thường trú</item>
    </string-array>
    <string-array name="marital_status">
        <item>----</item>
        <item>Độc thân</item>
        <item>Đã kết hôn</item>
        <item>Đã ly dị</item>
    </string-array>
    <string-array name="blood_group">
        <item>----</item>
        <item>O</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
    </string-array>
    <string-array name="composition_of_origin">
        <item>----</item>
        <item>Công nhân viên chức</item>
        <item>Nông dân</item>
        <item>Khác</item>
    </string-array>
    <string-array name="family_priority">
        <item>----</item>
    </string-array>
    <string-array name="priority_for_yourself">
        <item>----</item>
        <item>Con thương binh</item>
        <item>Tàn tật - hộ cận nghèo</item>
        <item>Con liệt sĩ</item>
        <item>Con mồ côi</item>
        <item>Con bệnh binh</item>
        <item>Dân tộc - hộ nghèo</item>
        <item>Dân tộc - hộ cận nghèo</item>
    </string-array>
    <string-array name="learning_ranking">
        <item>----</item>
        <item>Xuất sắc</item>
        <item>Giỏi</item>
        <item>Khá</item>
        <item>Trung bình</item>
        <item>Yếu</item>
    </string-array>
    <string-array name="practice_ranking">
        <item>----</item>
        <item>Tốt</item>
        <item>Khá</item>
        <item>Trung bình</item>
        <item>Yếu</item>
        <item>Kém</item>
    </string-array>
</resources>
