<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.PreferenceCategory
        android:key="@string/pre_category_notifications"
        android:title="Thông báo">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pre_key_news"
            android:summary="@string/pre_sum_news"
            android:title="Tin tức" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pre_key_receive_message"
            android:summary="@string/pre_sum_receive_message"
            android:title="Tin nhắn đến" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pre_key_send_message"
            android:summary="@string/pre_sum_send_message"
            android:title="Tin nhắn đi" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="@string/pre_category_alarm"
        android:title="Nhắc nhở">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pre_key_alarm_timetable"
            android:summary="@string/pre_sum_alarm_timetable"
            android:title="Lịch học" />
        <android.support.v7.preference.ListPreference
            android:defaultValue="30"
            android:entries="@array/timetable_time_entries"
            android:entryValues="@array/timetable_time_values"
            android:key="@string/pre_key_alarm_timetable_time"
            android:summary="@string/pre_sum_alarm_timetable_time"
            android:dialogTitle="Nhắc tôi trước giờ học"
            android:title="Nhắc tôi trước giờ học 30 phút" />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>