<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_goToToday"
        android:icon="@drawable/ic_today_white_24"
        android:orderInCategory="100"
        android:title="@string/action_goToToday"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refreshResume"
        android:orderInCategory="101"
        android:title="@string/action_refresh_resume"
        android:icon="@drawable/ic_sync_white_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_selectSemester"
        android:orderInCategory="102"
        android:title="@string/action_selectSemester"
        app:showAsAction="never" />
</menu>
