<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleX="@dimen/logo_scale"
        android:scaleY="@dimen/logo_scale"
        android:src="@mipmap/logo" />

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/login_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:text="@string/prompt_dang_kiem_tra_thong_tin"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/text_input_layout_vertical_margin">

            <AutoCompleteTextView
                android:id="@+id/txt_ma_sinh_vien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_ma_sinh_vien"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_email"
            android:layout_marginVertical="@dimen/text_input_layout_vertical_margin">

            <EditText
                android:id="@+id/txt_mat_khau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_mat_khau"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_dang_nhap_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="@dimen/login_button_layout_vertical_margin"
            android:background="@color/colorButtonLogin"
            android:text="@string/action_dang_nhap"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>