<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/change_pass_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_caution1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="Lưu ý:"
            android:textColor="@android:color/black"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_caution2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_caution1"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/caution_1"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/tv_caution3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_caution2"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/caution_2"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/tv_caution4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_caution3"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/caution_3"
            android:textSize="@dimen/small_text" />

        <TextView
            android:id="@+id/tv_caution5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_caution4"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/caution_4"
            android:textSize="@dimen/small_text" />

        <View
            android:id="@+id/v_horLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_caution5"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="#BEBEBE" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_oldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_horLine"
            android:layout_margin="@dimen/normal_margin"
            app:passwordToggleDrawable="@drawable/ic_eye_grey_24"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txt_oldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_old_pass"
                android:hint="@string/prompt_old_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/normal_padding"
                android:paddingEnd="@dimen/normal_padding"
                android:singleLine="true"
                android:textSize="@dimen/normal_text"
                tools:ignore="UnusedAttribute" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_oldPass"
            android:layout_margin="@dimen/normal_margin"
            app:passwordToggleDrawable="@drawable/ic_eye_grey_24"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txt_newPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_old_pass"
                android:hint="@string/prompt_new_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/normal_padding"
                android:paddingEnd="@dimen/normal_padding"
                android:singleLine="true"
                android:textSize="@dimen/normal_text"
                tools:ignore="UnusedAttribute" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_rePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_newPass"
            android:layout_margin="@dimen/normal_margin"
            app:passwordToggleDrawable="@drawable/ic_eye_grey_24"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txt_rePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_old_pass"
                android:hint="@string/prompt_rep_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/normal_padding"
                android:paddingEnd="@dimen/normal_padding"
                android:singleLine="true"
                android:textSize="@dimen/normal_text"
                tools:ignore="UnusedAttribute" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_changePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_rePass"
            android:layout_marginTop="@dimen/super_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:background="@drawable/radius_grey_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/change_pass"
            android:textColor="@android:color/black"
            android:textSize="@dimen/normal_text"
            android:theme="@style/Base.Widget.AppCompat.ActionButton"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m" />

        <ProgressBar
            android:id="@+id/pb_changePassProgress"
            style="@android:style/Widget.Holo.Light.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_rePass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/super_margin"
            android:translationZ="10dp"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>