<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_rootDayOfWeekItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/normal_margin"
    android:layout_marginBottom="@dimen/normal_margin"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dayOfWeek"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_padding"
            android:text="@string/monday"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_dayOfMonth"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:padding="@dimen/normal_padding"
            android:text="20/2/2018"
            android:textColor="@android:color/black"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_morning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_title"
        android:layout_margin="0dp"
        android:background="@drawable/layout_top_bottom_border"
        android:orientation="horizontal"
        android:paddingTop="@dimen/tiny_padding"
        android:paddingBottom="@dimen/tiny_padding">

        <TextView
            android:id="@+id/tv_sessionMorning"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/normal_padding"
            android:text="@string/morning" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_sessionMorning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_sessionMorning"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_afternoon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_morning"
        android:layout_margin="0dp"
        android:background="@drawable/layout_top_bottom_border"
        android:orientation="horizontal"
        android:paddingTop="@dimen/tiny_padding"
        android:paddingBottom="@dimen/tiny_padding">

        <TextView
            android:id="@+id/tv_sessionAfternoon"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/normal_padding"
            android:text="@string/afternoon" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_sessionAfternoon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_sessionAfternoon"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_evening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_afternoon"
        android:layout_margin="0dp"
        android:background="@drawable/layout_top_bottom_border"
        android:orientation="horizontal"
        android:paddingTop="@dimen/tiny_padding"
        android:paddingBottom="@dimen/tiny_padding">

        <TextView
            android:id="@+id/tv_sessionEvening"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/normal_padding"
            android:text="@string/evening" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_sessionEvening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_sessionEvening"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
    </RelativeLayout>

</RelativeLayout>